[project]
name = "token-count"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.44.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "python-frontmatter>=1.1.0",
    "tokenizers>=0.21.2",
    "transformers==4.53.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff.lint]
select = ["I"]
