[project]
name = "token-count"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llvmlite>=0.44.0",
    "numba==0.61.2",
    "numpy==2.2.6",
    "python-frontmatter>=1.1.0",
    "ruamel-yaml>=0.18.15",
    "tokenizers>=0.21.2",
    "transformers==4.53.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [".venv", "tokenizer"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
# near to black setting
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
exclude = "tokenizer/.*"

[[tool.mypy.overrides]]
module = ['tokenizer.tokenization_plamo']
disable_error_code = ["import-untyped", "override"]
